src/objects/VerifyTx__Practice_Group__c.object
<CustomObject>
    <description>Used in VerifyTx App</description>
    <fields>
        <fullName>Lead_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Lookup</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>VOB</relationshipLabel>
        <relationshipName>VOB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Client_Address__c</fullName>
        <label>Client Address</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Client_City__c</fullName>
        <label>Client City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Client_Date_of_Birth__c</fullName>
        <label>Client Date of Birth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Client_Member_ID__c</fullName>
        <label>Client Member ID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Client_Name__c</fullName>
        <label>Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Client_Percent_In_Net_Co_Insur__c</fullName>
        <label>Client Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Client_Percent_Out_of_Net_Co_Insurance__c</fullName>
        <label>Client Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Client_State__c</fullName>
        <label>Client State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Client_Status__c</fullName>
        <label>Client Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                    <default>true</default>
                    <label>prospect</label>
                </value>
                <value>
                    <fullName>Client</fullName>
                    <label>client</label>
                </value>
                <value>
                    <fullName>Discharged</fullName>
                    <label>discharged</label>
                </value>
                <value>
                    <fullName>Referred</fullName>
                    <label>referred</label>
                </value>
                <value>
                    <fullName>Termed</fullName>
                    <label>termed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VerifyTx__Client_Street__c</fullName>
        <label>Client Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Client_Zip_Code__c</fullName>
        <label>Client ZipCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Coverage__c</fullName>
        <label>Coverage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <referenceTo>VerifyTx__VTX_Facility__c</referenceTo>
        <relationshipLabel>VOB</relationshipLabel>
        <relationshipName>VOB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VerifyTx__Group_Number__c</fullName>
        <label>Group Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Co_Insurance__c</fullName>
        <label>Co-Insurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Co_Payment__c</fullName>
        <label>Co-Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Deductible_Amount_Met__c</fullName>
        <label>Amount Met</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Deductible_Amount_Time_Period__c</fullName>
        <label>Amount Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Deductible_Remaining_Time_Period__c</fullName>
        <label>Remaining Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Deductible_Remaining__c</fullName>
        <label>Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Deductible_Total_Time_Period__c</fullName>
        <label>Total Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Deductible_Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Out_of_Pkt_Amount_Met__c</fullName>
        <label>Amount Met</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Out_of_Pkt_Amount_Time_Period__c</fullName>
        <label>Amount Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Out_of_Pkt_Remaining_Time_Period__c</fullName>
        <label>Remaining Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Out_of_Pkt_Remaining__c</fullName>
        <label>Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Out_of_Pkt_Total_Time_Period__c</fullName>
        <label>Total Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__In_Net_Out_of_Pkt_Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Member_Id__c</fullName>
        <label>Member Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>VOB</relationshipLabel>
        <relationshipName>VOB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net_Co_Insurance__c</fullName>
        <label>Co-Insurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net_Co_Payment__c</fullName>
        <label>Co-Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net_Deductible_Amount_Met__c</fullName>
        <label>Amount Met</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net_Deductible_Amount_Time_Period__c</fullName>
        <label>Amount Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net_Deductible_RemainingTimePerio__c</fullName>
        <label>Remaining Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net_Deductible_Remaining__c</fullName>
        <label>Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net_Deductible_Total_Time_Period__c</fullName>
        <label>Total Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net_Deductible_Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net_Out_of_Pkt_Amount_Met__c</fullName>
        <label>Amount Met</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net_Out_of_Pkt_AmounttTmePeriod__c</fullName>
        <label>Amount Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net_Out_of_Pkt_RemainingTimePerio__c</fullName>
        <label>Remaining Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net_Out_of_Pkt_Remaining__c</fullName>
        <label>Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net_Out_of_Pkt_Total_Time_Period__c</fullName>
        <label>Total Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Out_of_Net__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__PAYER_Name_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payer Name</label>
        <referenceTo>VerifyTx__VTX_Payer_Detail__c</referenceTo>
        <relationshipName>Practice_Group</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VerifyTx__PatientFirstName__c</fullName>
        <label>Patient First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__PatientLastName__c</fullName>
        <label>Patient Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Patient_Birth_Date__c</fullName>
        <label>Patient Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Payer_Name__c</fullName>
        <label>Payer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Plan_Sponsor__c</fullName>
        <label>Plan Sponsor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Provider_Percent_In_Net_Co_Insur__c</fullName>
        <label>Provider Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Provider_Percent_Out_of_Net_Co_Insurance__c</fullName>
        <label>Provider Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Reference_Number__c</fullName>
        <label>Reference_Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subscriber_Address__c</fullName>
        <label>Subscriber Address</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subscriber_City__c</fullName>
        <label>Subscriber City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subscriber_Date_of_Birth__c</fullName>
        <label>Subscriber Date of Birth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subscriber_Member_ID__c</fullName>
        <label>Subscriber Member ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subscriber_Name__c</fullName>
        <label>Subscriber Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subscriber_Relationship__c</fullName>
        <label>Subscriber Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subscriber_State__c</fullName>
        <label>Subscriber State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subscriber_Street__c</fullName>
        <label>Subscriber Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subscriber_ZipCode__c</fullName>
        <label>Subscriber ZipCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Update_this_to_only_verify_once__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Update this to only verify once</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VerifyTx__VOB_ID__c</fullName>
        <label>VOB ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__VOB_Verification_Status__c</fullName>
        <label>Verification Status</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>VOB</label>
    <listViews>
        <fullName>VerifyTx__All</fullName>
        <columns>NAME</columns>
        <columns>VerifyTx__PatientFirstName__c</columns>
        <columns>VerifyTx__PatientLastName__c</columns>
        <columns>VerifyTx__Payer_Name__c</columns>
        <columns>VerifyTx__Coverage__c</columns>
        <columns>VerifyTx__Reference_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VOB-{00000}</displayFormat>
        <label>VOB Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VOB</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>